Do not copy example file

--- a/Users.Console/Users.Console.csproj
+++ b/Users.Console/Users.Console.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="user_updates.jsonl">
+    <None Update="example_user_updates.jsonl">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
